0.96.5
- Added username checking to parse out leading and trailing spaces and disallow names less than 4 chars.
- Security update: Typecasted all variables where appropriate
- Image module: Fixed a security issue that parsed php within the image code
- Image module: Directory disclosure fix
- Captcha: Typecasted variables for the width & height.
- Resource module: Checks for the excistance of files before a link to a file is shown.

0.96.3-4

- Removed Caching entirely (it wasn't being used, but now all the references to it are gone)
- Added charsets to htmlentities calls (for better i18n support)
- Fixed weblog bug so that comments can be edited.
- Moved title in Text Module views so that it appears above the edit icons (since it cannot be edited).
- Added version forcing to the EQL handler functions (backup subsystem)
- Fixed some newline handling bugs in the EQL functions (backup subsystem)
- Fixed the '$message' bug in the SMTP subsystem
- Added a view link for Resources Module search results.
- Better display name generation for the login module, in case the user has no first or last name.
- Fixed some strange bugs related to grant and revocation of Acting Administrator status.
- Fixed a blank page problem when logging in through login.php without visiting the site first.  Upon successful login, the user will be taken to the Default section.
- Fixed the phantom last section bug, where a user is taken to the last page they visited, even if it was days ago.
- Fixed bug in format_date plugin that caused misinterpretation of some strftime arguments on Windows.
- Fixed the 'Unable to Add Codebase' bug in the MultiSite Manager (along with some other issues)
- Corrected incomplete sentence in System Info page of Administration Control Panel
- Increased field length of phone numbers in Address Book entries to 15 characters (from 10) for non-US phone numbers